--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "babel-plugin-dotenv": "^0.1.1",
+    "react-native-dotenv": "^3.4.11",
     "typescript": "^5.1.3"
   },
   "private": true
