--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.6.1",
+    "@react-native-firebase/auth": "^21.6.1",
+    "@react-native-google-signin/google-signin": "^13.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "@reduxjs/toolkit": "^2.3.0",
     "expo": "~51.0.39",
+    "expo-build-properties": "~0.12.5",
+    "expo-dev-client": "~4.0.29",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.1.23",
     "react": "18.2.0",
