--- a/ios/EasyMart.xcodeproj/xcshareddata/xcschemes/EasyMart.xcscheme
+++ b/ios/EasyMart.xcodeproj/xcshareddata/xcschemes/EasyMart.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "easymartnative.app"
-               BlueprintName = "easymartnative"
-               ReferencedContainer = "container:easymartnative.xcodeproj">
+               BuildableName = "EasyMart.app"
+               BlueprintName = "EasyMart"
+               ReferencedContainer = "container:EasyMart.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "easymartnativeTests.xctest"
-               BlueprintName = "easymartnativeTests"
-               ReferencedContainer = "container:easymartnative.xcodeproj">
+               BuildableName = "EasyMartTests.xctest"
+               BlueprintName = "EasyMartTests"
+               ReferencedContainer = "container:EasyMart.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "easymartnative.app"
-            BlueprintName = "easymartnative"
-            ReferencedContainer = "container:easymartnative.xcodeproj">
+            BuildableName = "EasyMart.app"
+            BlueprintName = "EasyMart"
+            ReferencedContainer = "container:EasyMart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "easymartnative.app"
-            BlueprintName = "easymartnative"
-            ReferencedContainer = "container:easymartnative.xcodeproj">
+            BuildableName = "EasyMart.app"
+            BlueprintName = "EasyMart"
+            ReferencedContainer = "container:EasyMart.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
